# Valka

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/valka-cli/: Cargo.toml
crates/valka-cli/src/: main.rs
crates/valka-cli/src/commands/: logs.rs  mod.rs  task.rs
crates/valka-cluster/: Cargo.toml
crates/valka-cluster/src/: event_relay.rs  events.rs  forwarder.rs  gossip.rs  lib.rs  partition.rs  ring.rs
crates/valka-core/: Cargo.toml
crates/valka-core/src/: config.rs  error.rs  lib.rs  metrics.rs  types.rs
crates/valka-db/: Cargo.toml
crates/valka-db/migrations/: 20250101000001_create_tasks.sql  20250101000002_create_task_runs.sql  20250101000003_create_task_logs.sql  20250101000004_create_dead_letter.sql  20250101000005_create_workers.sql  20250101000006_add_task_output_error.sql  20250101000007_create_task_signals.sql
crates/valka-db/src/: lib.rs  migrations.rs  pool.rs
crates/valka-db/src/queries/: dead_letter.rs  mod.rs  signals.rs  task_logs.rs  task_runs.rs  tasks.rs
crates/valka-dispatcher/: Cargo.toml
crates/valka-dispatcher/src/: heartbeat.rs  lib.rs  service.rs  stream.rs  worker_handle.rs
crates/valka-matching/: Cargo.toml
crates/valka-matching/src/: lib.rs  partition.rs  service.rs  sync_match.rs  task_reader.rs
crates/valka-proto/: Cargo.toml  build.rs
crates/valka-proto/src/: lib.rs
crates/valka-scheduler/: Cargo.toml
crates/valka-scheduler/src/: delayed.rs  dlq.rs  election.rs  lib.rs  reaper.rs  retry.rs
crates/valka-sdk/: Cargo.toml
crates/valka-sdk/src/: client.rs  context.rs  error.rs  lib.rs  retry.rs  worker.rs
crates/valka-server/: Cargo.toml
crates/valka-server/src/: grpc.rs  internal_grpc.rs  lib.rs  main.rs  rest.rs  server.rs  shutdown.rs
crates/valka-tests/: Cargo.toml
crates/valka-tests/src/: cluster_tests.rs  config_tests.rs  dispatcher_tests.rs  error_tests.rs  heartbeat_tests.rs  lib.rs  lifecycle_tests.rs  matching_tests.rs  proto_tests.rs  retry_tests.rs  sdk_tests.rs
crates/valka-tests/src/integration/: cluster_tests.rs  db_dead_letter_tests.rs  db_signals_tests.rs  db_task_logs_tests.rs  db_task_runs_tests.rs  db_tasks_tests.rs  dispatcher_tests.rs  helpers.rs  lifecycle_tests.rs  mod.rs  rest_api_tests.rs  scheduler_tests.rs
crates/valka-web/: Cargo.toml
crates/valka-web/src/: app.rs  lib.rs  main.rs  shell.rs  utils.rs
crates/valka-web/src/api/: client.rs  mod.rs  types.rs
crates/valka-web/src/components/: event_stream.rs  layout.rs  mod.rs  queue_overview.rs  stats_cards.rs  task_create_dialog.rs  task_detail_panel.rs  task_filters.rs  task_logs_viewer.rs  task_runs_table.rs  task_signals_panel.rs  task_status_badge.rs  task_table.rs  ui.rs  worker_table.rs
crates/valka-web/src/pages/: dashboard.rs  dead_letters.rs  events.rs  mod.rs  task_detail.rs  tasks.rs  workers.rs
crates/valka-web/src/server_fns/: config.rs  dead_letters.rs  mod.rs  signals.rs  tasks.rs  workers.rs
crates/valka-web/style/: tailwind.css
deploy/: valka.example.toml
deploy/docker/: cluster.toml  docker-compose.cluster.yml  docker-compose.yml
deploy/helm/valka/: Chart.yaml  values.yaml
deploy/helm/valka/templates/: _helpers.tpl  configmap.yaml  headless-service.yaml  hpa.yaml  migrate-job.yaml  secret.yaml  service.yaml  servicemonitor.yaml  statefulset.yaml
examples/go/: go.mod
examples/go/producer/: main.go
examples/go/signal-demo/: main.go
examples/go/worker/: main.go
examples/js/: full-lifecycle.ts  producer.ts  worker.ts
examples/python/: producer.py  requirements.txt  signal_demo.py  worker.py
examples/rs/: Cargo.toml  full_lifecycle.rs  producer.rs  signal_demo.rs  worker.rs
examples/rs/src/: lib.rs
examples/typescript/: full-lifecycle.ts  package-lock.json  package.json  producer.ts  signal-demo.ts  worker.ts
proto/valka/v1/: api.proto  internal.proto  worker.proto
sdks/go/: README.md  client.go  context.go  errors.go  generate.go  generate_proto.sh  go.mod  options.go  retry.go  types.go  valka.go  worker.go
sdks/go/proto/valkav1/: api.pb.go  api_grpc.pb.go  common.pb.go  events.pb.go  worker.pb.go  worker_grpc.pb.go
sdks/python/: README.md  generate_proto.sh  pyproject.toml
sdks/python/src/valka/: __init__.py  client.py  context.py  errors.py  retry.py  types.py  worker.py
sdks/python/src/valka/_proto/valka/v1/: api_pb2.py  api_pb2.pyi  api_pb2_grpc.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  events_pb2.py  events_pb2.pyi  events_pb2_grpc.py  worker_pb2.py  worker_pb2.pyi  worker_pb2_grpc.py
sdks/typescript/: generate_proto.sh  package-lock.json  package.json  tsup.config.ts
sdks/typescript/src/: client.ts  context.ts  errors.ts  index.ts  proto-loader.ts  retry.ts  types.ts  worker.ts
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  events.ts  tasks.ts  types.ts  workers.ts
web/src/components/dashboard/: queue-overview.tsx  stats-cards.tsx
web/src/components/events/: event-stream.tsx
web/src/components/layout/: root-layout.tsx  sidebar.tsx
web/src/components/task-detail/: task-detail-panel.tsx  task-logs-viewer.tsx  task-runs-table.tsx  task-signals-panel.tsx
web/src/components/tasks/: task-create-dialog.tsx  task-filters.tsx  (+2 more)
web/src/hooks/: use-events.ts  use-tasks.ts
web/src/lib/: query-client.ts  utils.ts
web/src/pages/: dashboard.tsx  dead-letters.tsx  events.tsx  task-detail.tsx  tasks.tsx  workers.tsx
www/: .gitignore  next.config.mjs  package-lock.json  package.json  react-router.config.ts  tsconfig.json
www/app/: global.css  layout.tsx  not-found.tsx  page.tsx  root.tsx  routes.ts
www/app/components/: animate-in.tsx  mermaid.tsx  sdk-tabs.tsx
www/app/docs/: layout.tsx
www/app/lib/: layout.shared.tsx  source.ts
www/app/routes/: docs.tsx  home.tsx  not-found.tsx
www/content/docs/: architecture.mdx  cli.mdx  clustering.mdx  dashboard.mdx  deployment.mdx  grpc-api.mdx  index.mdx  installation.mdx  meta.json  quick-start.mdx  rest-api.mdx  task-lifecycle.mdx
(+10 files in other folders)
