[package]
name = "valka-cluster"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
valka-core = { workspace = true }
chitchat = { workspace = true }
hashring = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
