[package]
name = "valka-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
