[package]
name = "valka-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
valka-core = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
