[package]
name = "valka-dispatcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
valka-core = { workspace = true }
valka-proto = { workspace = true }
valka-matching = { workspace = true }
valka-db = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
metrics = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
