[package]
name = "valka-matching"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
valka-core = { workspace = true }
valka-db = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
metrics = { workspace = true }
sqlx = { workspace = true }
