[package]
name = "valka-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
prost-build = "0.14"
