[package]
name = "valka-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
valka-core = { workspace = true }
valka-db = { workspace = true }
valka-matching = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
metrics = { workspace = true }
uuid = { workspace = true }
