[package]
name = "valka-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
valka-proto = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
