[package]
name = "valka-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "valka-server"
path = "src/main.rs"

[dependencies]
valka-core = { workspace = true }
valka-proto = { workspace = true }
valka-db = { workspace = true }
valka-matching = { workspace = true }
valka-dispatcher = { workspace = true }
valka-scheduler = { workspace = true }
valka-cluster = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
figment = { workspace = true }
tikv-jemallocator = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
