[package]
name = "valka-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
valka-core = { workspace = true }
valka-proto = { workspace = true }
valka-db = { workspace = true }
valka-matching = { workspace = true }
valka-dispatcher = { workspace = true }
valka-scheduler = { workspace = true }
valka-cluster = { workspace = true }
valka-sdk = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tonic = { workspace = true }
dashmap = { workspace = true }
sqlx = { workspace = true }
